--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,12 @@ dependencies {
   compile project(':clickdebounce')
   compile files('libs/lib.jar')
   //  compile(name: 'lib-android-debug', ext: 'aar')
-
   fileTree(dir: 'libs', include: '**/*.aar').
       each { File file ->
         dependencies.add("compile", [name                         : file.name.lastIndexOf('.').
             with { it != -1 ? file.name[0..<it] : file.name }, ext: 'aar'])
       }
+  compile files('libs/1.3.1标注.jar')
 }
 
 afterEvaluate {
