--- a/buildsrc/build.gradle
+++ b/buildsrc/build.gradle
@@ -1,9 +1,25 @@
-apply plugin: 'java'
+apply plugin: 'groovy'
 
 repositories {
   jcenter()
+  google()
+  mavenCentral()
+}
+
+ext {
+  androidPluginVersion = '3.1.3'
 }
 
 dependencies {
-  compile project(':plugin')
+  implementation localGroovy()
+  implementation gradleApi()
+  implementation "com.android.tools.build:gradle:$androidPluginVersion"
+}
+
+sourceSets {
+  main {
+    groovy.srcDirs = ['src/main/groovy', '../click-debounce-gradle-plugin/src/main/groovy']
+    java.srcDirs = ['src/main/java', '../click-debounce-gradle-plugin/src/main/java']
+    resources.srcDirs = ['src/main/resources', '../click-debounce-gradle-plugin/src/main/resources']
+  }
 }
