--- a/click-debounce-lib-android/lib-android.gradle
+++ b/click-debounce-lib-android/lib-android.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.library'
 apply plugin: 'smartdengg.clickdebounce'
 
+debounceExt {
+  loggable = true
+}
+
 android {
   compileSdkVersion 26
   buildToolsVersion "27.0.3"
@@ -27,10 +31,10 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.android.support:appcompat-v7:26.1.0'
-  testCompile 'junit:junit:4.12'
-  androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation 'com.android.support:appcompat-v7:26.1.0'
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
 }
