--- a/click-debounce-sample/sample.gradle
+++ b/click-debounce-sample/sample.gradle
@@ -7,6 +7,10 @@ repositories {
   }
 }
 
+debounceExt {
+  loggable = true
+}
+
 android {
   compileSdkVersion 26
   buildToolsVersion '27.0.3'
@@ -24,20 +28,39 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
+  flavorDimensions "default"
+
+  productFlavors {
+    link {
+      dimension "default"
+      applicationId "com.link.im"
+      versionName 'link-version'
+    }
+
+    home {
+      dimension "default"
+      applicationId "com.home.im"
+      versionName 'home-version'
+    }
+  }
+
+
+
   lintOptions {
     abortOnError false
   }
 }
 
 dependencies {
-  compile fileTree(include: ['*.jar'], dir: 'libs')
-  compile 'com.android.support:appcompat-v7:26.1.0'
-  compile 'com.android.support.constraint:constraint-layout:1.0.2'
-  compile project(':click-debounce-runtime')
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
+  implementation 'com.android.support:appcompat-v7:26.1.0'
+  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
   //  compile(name: 'lib-android-debug', ext: 'aar')
-  fileTree(dir: 'libs', include: '**/*.aar').
-      each { File file ->
-        dependencies.add("compile", [name                         : file.name.lastIndexOf('.').
-            with { it != -1 ? file.name[0..<it] : file.name }, ext: 'aar'])
-      }
+  //  fileTree(dir: 'libs', include: '**/*.aar').
+  //      each { File file ->
+  //        dependencies.add("implementation", [name                  : file.name.lastIndexOf('.').
+  //            with { it != -1 ? file.name[0..<it] : file.name }, ext: 'aar'])
+  //      }
+  implementation project(':click-debounce-lib-android')
 }
