--- a/click-debounce-gradle-plugin/gradle-plugin.gradle
+++ b/click-debounce-gradle-plugin/gradle-plugin.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'groovy'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'com.github.SmartDengg'
 
 //noinspection GroovyUnusedAssignment
-sourceCompatibility = JavaVersion.VERSION_1_7
+sourceCompatibility = JavaVersion.VERSION_1_8
 //noinspection GroovyUnusedAssignment
-targetCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
   jcenter()
@@ -12,7 +15,7 @@ repositories {
 }
 
 ext {
-  androidPluginVersion = '3.1.3'
+  androidPluginVersion = '3.2.1'
 }
 
 dependencies {
