--- a/click-debounce-sample/sample.gradle
+++ b/click-debounce-sample/sample.gradle
@@ -19,7 +19,7 @@ android {
       minifyEnabled false
     }
     release {
-      minifyEnabled true
+      minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
