--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -6,14 +6,10 @@ repositories {
   mavenCentral()
 }
 
-ext {
-  androidPluginVersion = '3.1.3'
-}
-
 dependencies {
   implementation localGroovy()
   implementation gradleApi()
-  implementation "com.android.tools.build:gradle:$androidPluginVersion"
+  implementation "com.android.tools.build:gradle:3.2.1"
 }
 
 sourceSets {
