--- a/click-debounce-lib-android/src/main/AndroidManifest.xml
+++ b/click-debounce-lib-android/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.smartdengg.clickdebounce" />
+  package="com.smartdengg.clickdebounce.lib.android" />
