--- a/click-debounce-sample/sample.gradle
+++ b/click-debounce-sample/sample.gradle
@@ -5,7 +5,7 @@ debounce.loggable = true
 
 android {
   compileSdkVersion 26
-  buildToolsVersion '27.0.3'
+  buildToolsVersion '28.0.3'
   defaultConfig {
     applicationId "com.smartdengg.clickdebounce"
     minSdkVersion 15
@@ -39,4 +39,7 @@ dependencies {
   implementation fileTree(include: ['*.jar'], dir: 'libs')
   implementation 'com.android.support:appcompat-v7:26.1.0'
   implementation project(':click-debounce-lib-android')
+  implementation 'commons-io:commons-io:2.6'
+  implementation 'org.ow2.asm:asm:6.0'
+  implementation 'org.ow2.asm:asm-commons:6.0'
 }
