--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,12 @@ buildscript {
     google()
     jcenter()
     mavenCentral()
+//    maven { url 'https://jitpack.io' }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.3.2'
     classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-
+//    classpath 'com.github.SmartDengg.asm-clickdebounce:click-debounce-gradle-plugin:1.2.0'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
