--- a/click-debounce-gradle-plugin/gradle-plugin.gradle
+++ b/click-debounce-gradle-plugin/gradle-plugin.gradle
@@ -17,7 +17,7 @@ repositories {
 dependencies {
   compile gradleApi()
   compile localGroovy()
-  implementation "com.android.tools.build:gradle:3.3.2"
+  compileOnly "com.android.tools.build:gradle:3.3.2"
   implementation 'commons-io:commons-io:2.6'
   implementation 'org.ow2.asm:asm:7.0'
   implementation 'org.ow2.asm:asm-commons:6.0'
