--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ buildscript {
     maven { url 'https://jitpack.io' }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.6.3'
+    classpath 'com.android.tools.build:gradle:4.1.3'
     classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-    classpath 'com.github.SmartDengg.asm-clickdebounce:click-debounce-gradle-plugin:2.0.0'
+//    classpath 'com.github.SmartDengg.asm-clickdebounce:click-debounce-gradle-plugin:2.0.0'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
