--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -9,13 +9,13 @@ repositories {
 dependencies {
   implementation localGroovy()
   implementation gradleApi()
-  implementation "com.android.tools.build:gradle:3.6.3"
+  implementation 'com.android.tools.build:gradle:4.1.3'
 }
 
-//sourceSets {
-//  main {
-//    groovy.srcDirs = ['src/main/groovy', '../click-debounce-gradle-plugin/src/main/groovy']
-//    java.srcDirs = ['src/main/java', '../click-debounce-gradle-plugin/src/main/java']
-//    resources.srcDirs = ['src/main/resources', '../click-debounce-gradle-plugin/src/main/resources']
-//  }
-//}
+sourceSets {
+  main {
+    groovy.srcDirs = ['src/main/groovy', '../click-debounce-gradle-plugin/src/main/groovy']
+    java.srcDirs = ['src/main/java', '../click-debounce-gradle-plugin/src/main/java']
+    resources.srcDirs = ['src/main/resources', '../click-debounce-gradle-plugin/src/main/resources']
+  }
+}
